<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/PAYMENT"
            android:background="@color/orange"
            android:textSize="30sp"
            android:padding="5sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <!--        set border-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_info_user"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:src="@drawable/baseline_location_on_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Deliveryaddress"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="Nguyễn Anh Hào"
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:inputType="number"
                android:hint="Phone Number" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="30dp"
                android:hint="Address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/baseline_monetization_on_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/Choosemethodpayment"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbPaymentOnDelivery"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/Paymentondelivery" />

            <RadioButton
                android:id="@+id/rbPaymentWithCard"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/VisaCredit" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtCoupon"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Coupon"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ivRefreshCoupon"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_wifi_protected_setup_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--            payment detail-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/baseline_payment_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/Paymentdetail"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--            price use coupon-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/Price"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="100.00$"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--            price-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Discount"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="-0.00$"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--            delivery fees-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Delivery fee"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDeliveryFee"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="+2.00$"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--            total price-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Total price (include VAT)"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="97.00$"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="#000000"
                android:text="close"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="Confirm"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>